# ghc

./: ghc.mk  packages
compiler/: ghc.cabal.in
compiler/ghci/: Linker.lhs
compiler/main/: Finder.lhs  PackageConfig.hs
libraries/bin-package-db/: bin-package-db.cabal
libraries/bin-package-db/Distribution/InstalledPackageInfo/: Binary.hs
libraries/distribution-base/: .gitignore  .project  GNUmakefile  distribution-base.cabal  ghc.mk
libraries/distribution-base/Distribution/: InstalledPackageInfo.hs  License.hs  Package.hs  PackageIndex.hs  Utils.hs
libraries/distribution-base/Distribution/Compat/: ParseUtils.hs
utils/ghc-cabal/: ghc-cabal.cabal  ghc.mk
utils/ghc-pkg/: Main.hs  ghc-pkg.cabal
