name: distribution-base
version: 1.18.0
copyright: 2003-2006, Isaac Jones
           2005-2011, Duncan Coutts
license: BSD3
license-file: LICENSE
author: Isaac Jones <ijones@syntaxpolice.org>
        Duncan Coutts <duncan@community.haskell.org>
maintainer: cabal-devel@haskell.org
homepage: http://www.haskell.org/cabal/
bug-reports: https://github.com/haskell/cabal/issues
synopsis: A framework for packaging Haskell software
description:
  The Haskell Common Architecture for Building Applications and
  Libraries: a framework defining a common interface for authors to more
  easily build their Haskell applications in a portable way.
  .
  The Haskell Cabal is part of a larger infrastructure for distributing,
  organizing, and cataloging Haskell libraries and tools.
category: Distribution
cabal-version: >=1.10
build-type: Simple
-- Even though we do use the default Setup.lhs it's vital to bootstrapping
-- that we build Setup.lhs using our own local Cabal source code.


source-repository head
  type:     git
  location: https://github.com/haskell/cabal/
  subdir:   Cabal

library
  build-depends:
    base       >= 4       && < 5,
    deepseq    >= 1.3     && < 1.4,
    filepath   >= 1       && < 1.4,
    directory  >= 1       && < 1.3,
    process    >= 1.0.1.1 && < 1.3,
    time       >= 1.1     && < 1.5,
    containers >= 0.1     && < 0.6,
    array      >= 0.1     && < 0.5,
    pretty     >= 1       && < 1.2,
    bytestring >= 0.9

  if !os(windows)
    build-depends:
      unix >= 2.0 && < 2.8

  ghc-options: -Wall -fno-ignore-asserts -fwarn-tabs

  exposed-modules:
    Distribution.Compat.ReadP
    Distribution.Compat.ParseUtils
    Distribution.InstalledPackageInfo
    Distribution.License
    Distribution.ModuleName
    Distribution.Package
    Distribution.PackageIndex
    Distribution.Text
    Distribution.Utils

  default-language: Haskell98
  default-extensions: CPP

